--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,11 +1,10 @@
 <nav class="nav">
-  <div class="nav__brand"><a href="index.html">Your Name</a></div>
+  <div class="nav__brand"><a href="index.html">Nishant Chauhan</a></div>
   <button class="nav__toggle" aria-label="Toggle navigation" onclick="document.querySelector('.nav__links').classList.toggle('open')">☰</button>
   <ul class="nav__links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="people.html">People</a></li>
-    <li><a href="software.html">Software</a></li>
+      <!-- li><a href="projects.html">Projects</a></li-->
+    <!--li><a href="software.html">Software</a></li-->
     <li><a href="papers.html">Papers</a></li>
     <li><a href="cv.html">CV</a></li>
     <li><a href="contact.html">Contact</a></li>
