--- a/partials/nav.html
+++ b/partials/nav.html
@@ -4,8 +4,8 @@
   <ul class="nav__links">
     <li><a href="index.html">Home</a></li>
       <!-- li><a href="projects.html">Projects</a></li-->
-    <!--li><a href="software.html">Software</a></li-->
-    <li><a href="papers.html">Papers</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    <li><a href="publications.html">Publications</a></li>
     <li><a href="cv.html">CV</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
